# Railcar

rcc/: CMakeLists.txt  c.sh  grammar.ebnf  run.sh
rcc/examples/: examples.rc
rcc/src/: errors.cpp  errors.hpp  main.cpp  main.hpp  util.cpp  util.hpp
rcc/src/lexer/: lexer.cpp  lexer.hpp  tokens.cpp  tokens.hpp
rcc/src/parser/ast/: ASTNode.cpp  ASTNode.hpp  GlobDefAST.cpp  GlobDefAST.hpp  IdAST.cpp  IdAST.hpp  LiteralAST.cpp  LiteralAST.hpp  NatLiteralAST.cpp  NatLiteralAST.hpp  ProgramAST.cpp  ProgramAST.hpp  SimpleTypeAST.cpp  SimpleTypeAST.hpp  StatementAST.cpp  StatementAST.hpp  TypeAST.cpp  TypeAST.hpp
rcc/test/: examples.rc  test.rc
